# datasets

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
relational/: README.md
src/synthesized_datasets/: __init__.py  _datasets.py  _dtypes.py  datasets.yaml
tabular/: README.md
tabular/health/: README.md  healthcare.csv
tabular/insurance/: README.md
tabular/uci/: README.md
tests/: test_datasets.py
time-series/: README.md  air-quality.csv  mock_medical_data.csv
